--- a/views/animals/index.ejs
+++ b/views/animals/index.ejs
@@ -5,6 +5,8 @@
     <%- include('../partials/header.ejs') %>
     
     <main>
+        <a href="/animals/new"><button>add new animal</button></a>
+
         <% for (animal of animals) { %>
             <article>
                 <a href="/animals/<%= animal._id %>">
