--- a/views/animals/show.ejs
+++ b/views/animals/show.ejs
@@ -24,6 +24,10 @@
 
         <a href="/animals"><button>Back</button></a>
 
+        <form action="/animals/<%= animal._id %>?_method=DELETE" method="POST">
+            <input type="submit" value="delete">
+        </form>
+
     </main>
 
 </body>
