finished update route, finished basic CRUD functionality

--- a/views/animals/edit.ejs
+++ b/views/animals/edit.ejs
@@ -24,6 +24,9 @@
                 </fieldset>
                 <input type="submit" value="Update the <%= animal.species %>">
             </form>
+
+            <a href="/animals"><button>back</button></a>
+
         </div>
     </main>
 
